[package]
name = "jets"
version = "0.1.0"
authors = ["Jeffsky <jjeffcaii@outlook.com>"]
edition = "2018"

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
rand = "0.7.2"
bytes = "0.5.3"

[dependencies.rocksdb]
version = "0.13.0"
default-features = false
features = ["lz4"]

[dev-dependencies]
hex = "0.4.0"


