[package]
name = "jets"
version = "0.1.0"
authors = ["Jeffsky <jjeffcaii@outlook.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
log = "0.4.8"
rand = "0.7.3"
bytes = "0.5.3"
multimap = "0.8.0"
glob = "0.3.0"
jieba-rs = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33.0"
semver = "0.9.0"
mac_address = "1.0.3"
base64 = "0.11.0"

[dependencies.rocksdb]
version = "0.13.0"
default-features = false
features = ["lz4"]

[dev-dependencies]
hex = "0.4.0"
env_logger = "0.7.1"
criterion = "0.3"

[[example]]
name = "douban"
path = "examples/douban/main.rs"

[[bench]]
name = "my_benchmark"
harness = false